--- a/static/css/my.css
+++ b/static/css/my.css
@@ -1,4 +1,6 @@
 html {
+  background-color: #222;
+  color: #ddd;
   font-family: "OpenSans", sans-serif;
 }
 
@@ -6,23 +8,90 @@ html {
   margin: auto;
   width: 1280px;
   height: 720px;
+
 }
 
 .editor {
-  width: 540px;
+  width: 360px;
   height: 100%;
-  background-color: #222;
+  border-right: 1px solid #444;
 
   display: block;
   float: left;
 }
 
 .preview {
-  width: 720px;
+  width: 900px;
   height: 100%;
-  margin-left: 20px;
-  background-color: #222;
 
   display: block;
   float: left;
+}
+
+.pokemon-details {
+  margin-top: 8px;
+  width: 240px;
+}
+
+button {
+  height: 24px;
+  margin: 0;
+  padding: 0;
+  border: 0.8px solid #222;
+  font-family: "OpenSans", sans-serif;
+  background-color: #844;
+  color: #ddd;
+  margin-top: 8px;
+  cursor: pointer;
+}
+button:hover  { background-color: #633; }
+button:active { background-color: #422; }
+
+#name-input{
+  width: 120px;
+  height: 16px;
+  padding: 4px;
+  margin: 0;
+  border: 0;
+  margin-top: 8px;
+}
+
+#name-list {
+  width: 144px;
+  max-height: 240px;
+  overflow-y: auto;
+  background-color: #333;
+  float: bottom;
+  position: absolute;
+  z-index: 5;
+}
+#name-list ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+#name-list ul li {
+  border-bottom: 1px solid #daa;
+  cursor: pointer;
+}
+#name-list ul li:hover {
+  background-color: #433;
+}
+
+.level input {
+  width: 40px;
+  height: 16px;
+  padding: 4px;
+  margin: 0;
+  border: 0;
+  margin-top: 8px;
+}
+
+select {
+  width: 128px;
+  height: 24px;
+  padding: 4px;
+  margin: 0;
+  border: 0;
+  margin-top: 8px;
 }
