--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,15 @@
     <meta charset="utf-8">
     <title>Pokemon Layout Maker</title>
 
-    <link rel="stylesheet" href="./static/css/my.css">
-    <script type="text/javascript" src="./static/js/my.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./static/css/color.css">
   </head>
   <body>
-    <div class="container">
-      <div class="editor">
-
-
-
-      </div>
-      <div class="preview">&nbsp;</div>
-    </div>
+  {% block content %}{% endblock %}
   </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="./static/js/typeahead.js"></script>
+  <script type="text/javascript" src="./static/js/my.js"></script>
 </html>
