--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,19 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./static/css/color.css">
+    <script src="https://kit.fontawesome.com/dde434f044.js" crossorigin="anonymous"></script>
   </head>
   <body>
-  {% block content %}{% endblock %}
+    <div class="container">
+      <div class="row mt-3">
+        <div class="left col-md-4">
+          {% block left %} {% endblock %}
+        </div>
+        <div class="right col-md-8">
+          {% block right %} {% endblock %}
+        </div>
+      </div>
+    </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
