--- a/static/css/my.css
+++ b/static/css/my.css
@@ -1,63 +1,17 @@
-html {
+body {
   background-color: #222;
   color: #ddd;
   font-family: "OpenSans", sans-serif;
 }
 
-.container {
-  margin: auto;
-  width: 1280px;
-  height: 720px;
+.container {margin: 0; max-width: 100%;}
 
-}
-
-.editor {
-  width: 360px;
-  height: 100%;
+.left {
   border-right: 1px solid #444;
-
-  display: block;
-  float: left;
-}
-
-.preview {
-  width: 900px;
-  height: 100%;
-
-  display: block;
-  float: left;
-}
-
-.pokemon-details {
-  margin-top: 8px;
-  width: 240px;
-}
-
-button {
-  height: 24px;
-  margin: 0;
-  padding: 0;
-  border: 0.8px solid #222;
-  font-family: "OpenSans", sans-serif;
-  background-color: #844;
-  color: #ddd;
-  margin-top: 8px;
-  cursor: pointer;
-}
-button:hover  { background-color: #633; }
-button:active { background-color: #422; }
-
-#name-input{
-  width: 120px;
-  height: 16px;
-  padding: 4px;
-  margin: 0;
-  border: 0;
-  margin-top: 8px;
 }
 
 #name-list {
-  width: 144px;
+  width: 80%;
   max-height: 240px;
   overflow-y: auto;
   background-color: #333;
@@ -78,20 +32,63 @@ button:active { background-color: #422; }
   background-color: #433;
 }
 
-.level input {
-  width: 40px;
-  height: 16px;
-  padding: 4px;
-  margin: 0;
-  border: 0;
-  margin-top: 8px;
+.btn, .input-label {
+  font-size: .7em;
+  margin-left: 10%;
 }
 
-select {
-  width: 128px;
-  height: 24px;
-  padding: 4px;
-  margin: 0;
-  border: 0;
-  margin-top: 8px;
+.form-control {
+  height: 2em;
+  font-size:0.8em;
+}
+
+.pokemon-form {
+  margin: 1em;
+}
+
+.del {
+  position: absolute;
+  right: -1em;
+  top: 0;
+}
+.del:hover {
+  color: #844;
+  cursor: pointer;
+}
+
+.header-float {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #a55;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-bottom-left-radius: 2em;
+  border-bottom-right-radius: 2em;
+}
+.header-float a {
+  color: #444;
+}
+.header-float a:hover {
+  color: #222;
+  text-decoration: none;
+}
+
+.footer-float {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #444;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+}
+.footer-float a {
+  color: #aaa;
+}
+.footer-float a:hover {
+  color: #888;
+  text-decoration: none;
 }
