--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,18 +5,24 @@
     <title>Pokemon Layout Maker</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./static/css/color.css">
+    <link rel="stylesheet" href="./static/css/my.css">
     <script src="https://kit.fontawesome.com/dde434f044.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
-      <div class="row mt-3">
+      <div class="row">
+        {% block header %} {% endblock %}
+      </div>
+      <div class="row">
         <div class="left col-md-4">
           {% block left %} {% endblock %}
         </div>
         <div class="right col-md-8">
           {% block right %} {% endblock %}
         </div>
+      </div>
+      <div class="row">
+        {% block footer %} {% endblock %}
       </div>
     </div>
   </body>
