--- a/static/css/my.css
+++ b/static/css/my.css
@@ -7,7 +7,11 @@ body {
 .container {margin: 0; max-width: 100%;}
 
 .left {
+  background-color: #222;
   border-right: 1px solid #444;
+  height: 640px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #name-list {
@@ -65,6 +69,7 @@ body {
   padding-right: 1em;
   border-bottom-left-radius: 2em;
   border-bottom-right-radius: 2em;
+  margin-bottom: 1em;
 }
 .header-float a {
   color: #444;
@@ -75,7 +80,7 @@ body {
 }
 
 .footer-float {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -91,4 +96,48 @@ body {
 .footer-float a:hover {
   color: #888;
   text-decoration: none;
+}
+
+#add-pokemon {
+  margin-left: 0;
+  position: relative;
+  left: 50%;
+  top: 2.7em;
+  transform: translateX(-50%);
+}
+
+.style-form>.container>.row {
+  margin-bottom: 0.2em;
+}
+
+#preview {
+  width: 720px;
+}
+
+#preview > .row {
+  margin-left: 37px;
+}
+.pokemon-card {
+  width: 300px;
+  height: 128px;
+  margin-top: 4px;
+  margin-right: 20px;
+  background-color: #487;
+  transform: skewX(-15deg);
+}
+.pokemon-card img {
+  transform: skewX(15deg);
+}
+.pokemon-card-nickname {
+  font-size: 2em;
+  transform: skewX(15deg);
+}
+.pokemon-card-name {
+  transform: skewX(15deg);
+}
+.pokemon-card-level {
+  transform: skewX(15deg);
+}
+.pokemon-card-gender {
+  transform: skewX(15deg);
 }
