--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,22 @@
 {% endblock %}
 
 {% block left %}
+<div class="row style-form">
+  <div class="container">
+    <div class="row"><h3>Style Options</h3></div>
+    <div class="row">
+      <span class="col-3">Layout:</span>
+      <select class="col-3 form-control" name="layout" id="layout-select">
+        <option value="3x2">3x2</option>
+        <option value="6x1">6x1</option>
+      </select>
+    </div>
+    <div class="row">
+      <span class="col-3" >Background Color:</span>
+      <input class="col-3 form-control" type="text" value="#487">
+    </div>
+  </div>
+</div>
 <div class="row pokemon-form">
   <div class="col-4">
     <img id="pokemon-img" src="https://user-images.githubusercontent.com/13006910/76887468-64de6880-6893-11ea-8712-d9b69391ee85.png" alt="sprite" width=100 height=100>
@@ -25,7 +41,7 @@
     <div class="row">
       <div class="col-6 pokemon-level">
         <span class="input-label">Level</span>
-        <input type="number" class="form-control" value=5 min=1 max=100>
+        <input id="level-input" type="number" class="form-control" value=5 min=1 max=100>
       </div>
       <div class="col-6 pokemon-gender">
         <span class="input-label">Gender</span>
@@ -45,11 +61,18 @@
 {% endblock %}
 
 {% block right %}
-<div id="preview" class="row"></div>
+<div id="preview">
+  <div class="row" id="row0">&nbsp;
+  </div>
+  <div class="row" id="row1">&nbsp;
+  </div>
+  <div class="row" id="row2">&nbsp;
+  </div>
+</div>
 {% endblock %}
 
 {% block footer %}
 <div class="footer-float">
-Made by MirageOwl . <a target="_blank" href="github.com/mirageowl">Github</a> . <a target="_blank" href="twitter.com/mirageowl">Twitter</a>
+Made by MirageOwl . <a target="_blank" href="https://github.com/mirageowl">Github</a> . <a target="_blank" href="https://twitter.com/mirageowl">Twitter</a>
 </div>
 {% endblock %}
